mailpoet/assets/js/src/email-editor/engine/components/styles-sidebar/index.scss
.mailpoet-email-editor__styles-panel {
  display: flex;
  flex-direction: column;
  height: 100%;

  .components-panel,
  .components-navigator-provider,
  .components-navigator-screen {
    height: 100%;
  }

  .components-navigator-button {
    width: 100%;
  }

  .mailpoet-email-editor__styles-header {
    margin-bottom: 0;
  }

  .mailpoet-email-editor__styles-header-description {
    padding: 0 16px;
  }

  h3.edit-site-global-styles-subtitle {
    margin-bottom: 0;
  }

  .single-column {
    grid-column: span 1;
  }

  .edit-site-global-styles-screen-typography__indicator {
    border-radius: 3px;
    height: 2em;
    line-height: 2em;
    padding: 0;
    width: 2em;
  }

  .edit-site-typography-preview {
    align-items: center;
    background: #f0f0f0;
    border-radius: 2px;
    display: flex;
    justify-content: center;
    margin-bottom: 16px;
    min-height: 100px;
    overflow: hidden;
  }
}

